--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,9 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.app-note {
+    background-color: pink;
+    margin-bottom: 16px;
+    padding: 12px;
+}
