--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,9 @@ button {
   width: 100%;
   padding: 8px;
 }
+
+a {
+  color: rgb(24, 73, 236);
+  text-decoration: underline;
+  cursor: pointer;
+}
