--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,14 @@
     margin-bottom: 16px;
     padding: 12px;
 }
+
+.app-edit-note {
+    background-color: white;
+    border: 4px solid black;
+    width: 250px;
+    padding: 12px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 99;
+}
