--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,14 @@
 }
 
 .app-container {
-    max-width: 800px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.box {
+    border: 1px solid rgb(8, 158, 207);
+    border-radius: 12px;
+    margin-bottom: 12px;
+    padding: 8px 16px;
 }
