--- a/src/LayoutPage.css
+++ b/src/LayoutPage.css
@@ -1,8 +1,8 @@
-.app-section {
+.layout-page-section {
     padding: 20px;
 }
 
-.app-container {
+.layout-page-container {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
